
erDiagram
    PLAYER ||--o{ PLAYER_PROFESSION : has
    PLAYER ||--o{ REPUTATION : earns
    PLAYER ||--o{ INVENTORY_ITEM : owns
    PLAYER ||--o{ COMBAT_PARTICIPANT : engages
    PLAYER ||--o{ STATUS_EFFECT : suffers
    PLAYER ||--o{ HEAT_EVENT : triggers
    PLAYER ||--o{ AUDIT_LOG : records

    DISTRICT ||--o{ COMBAT : location
    DISTRICT ||--o{ PLAYER : home

    FACTION ||--o{ REPUTATION : tracked

    ITEM_DEF ||--o{ ITEM_INSTANCE : templates
    ITEM_INSTANCE ||--o{ INVENTORY_ITEM : placed

    COMBAT ||--o{ COMBAT_TURN : consists_of
    COMBAT ||--o{ STATUS_EFFECT : applies
    COMBAT ||--o{ COMBAT_PARTICIPANT : includes
    COMBAT ||--o{ RANGE_STATE : updates

    PLAYER {
        uuid id PK
        text alias
        text legal_name
        uuid home_district_id FK
        jsonb birth_packet
        timestamptz created_at
    }

    PLAYER_ATTRIBUTES {
        uuid player_id PK,FK
        int str
        int endu
        int agi
        int dex
        int intel
        int wits
        int perc
        int comp
        int cha
    }

    PLAYER_PROFESSION {
        uuid player_id FK
        uuid profession_id FK
        bool is_current
        timestamptz since
    }

    FACTION {
        uuid id PK
        text name
        text description
    }

    DISTRICT {
        uuid id PK
        text name
        int pd_rating
        jsonb hazards
    }

    REPUTATION {
        uuid player_id FK
        uuid faction_id FK
        int score
        PRIMARY KEY (player_id, faction_id)
    }

    ITEM_DEF {
        uuid id PK
        text name
        text class
        text subtype
        numeric weight
        text slot
        bool illegal
        jsonb base_stats
        text description
    }

    ITEM_INSTANCE {
        uuid id PK
        uuid item_def_id FK
        uuid owner_player_id FK
        int mint_index
        int rarity_seed
        text float_title
        text roll_grade
        text signature_rune
        text hidden_trait
        int condition
        bool insured
        timestamptz created_at
    }

    INVENTORY_ITEM {
        uuid player_id FK
        uuid item_instance_id FK
        text location  // carried|stash|equipped
        text slot
        PRIMARY KEY (player_id, item_instance_id)
    }

    COMBAT {
        uuid id PK
        uuid district_id FK
        uuid initiator_player_id FK
        uuid defender_player_id FK
        bool initiator_online
        bool defender_online
        text outcome
        timestamptz started_at
        timestamptz ended_at
    }

    RANGE_STATE {
        uuid combat_id PK,FK
        text current_range
        int round_number
    }

    COMBAT_PARTICIPANT {
        uuid combat_id FK
        uuid player_id FK
        bool is_ai
        jsonb snapshot_stats
        PRIMARY KEY (combat_id, player_id)
    }

    COMBAT_TURN {
        uuid id PK
        uuid combat_id FK
        uuid actor_player_id FK
        text action_type
        jsonb params
        jsonb result
        timestamptz created_at
    }

    STATUS_EFFECT_DEF {
        uuid id PK
        text name
        text description
        int base_duration
        text stacking_rule
        text effect_type
    }

    STATUS_EFFECT {
        uuid id PK
        uuid combat_id FK
        uuid target_player_id FK
        uuid status_def_id FK
        int remaining_turns
        int potency
        timestamptz created_at
    }

    HEAT_EVENT {
        uuid id PK
        uuid player_id FK
        int delta
        text reason
        timestamptz created_at
    }

    AUDIT_LOG {
        uuid id PK
        uuid actor_player_id FK
        text action
        jsonb payload
        timestamptz created_at
    }
